--- a/html/index_template.html
+++ b/html/index_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>erpnext.org</title>
+		<title>%(app_name)s</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -18,6 +18,7 @@
 		<script type="text/javascript" src="lib/js/jquery/jquery.min.js"> </script>  
  		<script type="text/javascript" src="lib/js/history.min.js"></script>  
  		<script type="text/javascript" src="lib/core.js"></script>  
+ 		<script type="text/javascript">$.app_name = "%(app_name)s"</script>  
 	</head>
 	<body>
 		<div class="outer shadow round">
