--- a/plugins/toolbar.html
+++ b/plugins/toolbar.html
@@ -34,7 +34,7 @@ $(document).ready(function() {
 			<li>\
 			<li class="dropdown">\
 				<a class="dropdown-toggle" href="#">'
-					+(session.userobj.full_name || 'User')+'</a>\
+					+(session.userobj.fullname || 'User')+'</a>\
 				<ul class="dropdown-menu">\
 					<li><a href="#editprofile">Edit Profile</a></li>\
 					<li><a href="#" id="topbar_logout">Logout</a></li>\
