--- a/html/template.html
+++ b/html/template.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript" src="lib/js/jquery/jquery.min.js"> </script>
  		<script type="text/javascript" src="lib/js/history.min.js"></script>
  		<script type="text/javascript" src="lib/js/core.js"></script>
- 		<script type="text/javascript" src="lib/js/toolbar.js"></script>
+ 		<script type="text/javascript" src="lib/views/toolbar.js"></script>
  		<script type="text/javascript">$.app_name = "%(app_name)s"</script>
 	</head>
 	<body>
