refactored chai.py, core models can now be overridden and some ui cleanup

--- a/html/template.html
+++ b/html/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>%(app_name)s</title>
+		<title>[Set Title]</title>
 		<meta name="description" content="">
 		<meta name="author" content="">
 
@@ -19,7 +19,7 @@
  		<script type="text/javascript" src="lib/js/history.min.js"></script>
  		<script type="text/javascript" src="lib/js/core.js"></script>
  		<script type="text/javascript" src="lib/views/toolbar.js"></script>
- 		<script type="text/javascript">$.app_name = "%(app_name)s"</script>
+ 		<script type="text/javascript">$.app_name = "[Set App Name]"</script>
 	</head>
 	<body>
 		<div class="topbar">
