--- a/chaijs/cms/editpage.html
+++ b/chaijs/cms/editpage.html
@@ -4,7 +4,7 @@
 <div id="editpage-form-wrapper"></div>
 
 <script>
-$.require('lib/views/form/form.js');
+$.require('lib/chaijs/form/form.js');
 
 var EditPageFormView = FormView.extend({
 	init: function(opts) {
