--- a/chaijs/cms/filelist.html
+++ b/chaijs/cms/filelist.html
@@ -16,7 +16,7 @@
 // get list of pages
 $.require('lib/js/prettydate.js');
 $.require('lib/js/common.js');
-$.require('lib/views/upload.js');
+$.require('lib/chaijs/upload.js');
 
 // delete
 $("#filelist").delete_table_row({
