--- a/chaijs/cms/pagelist.html
+++ b/chaijs/cms/pagelist.html
@@ -3,7 +3,7 @@
 
 <script>
 
-$.require('lib/views/ui/objlist.js');
+$.require('lib/chaijs/ui/objlist.js');
 $.require('lib/js/prettydate.js');
 
 var PageListView = ObjListView.extend({
