--- a/chaijs/cms/settings.html
+++ b/chaijs/cms/settings.html
@@ -4,7 +4,7 @@
 <div id="cms-settings-form"></div>
 
 <script>
-$.require('lib/views/form/form.js');
+$.require('lib/chaijs/form/form.js');
 
 app.cms_settings_form = new FormView({
 	$parent: $('#cms-settings-form'),
