--- a/chaijs/user/forgot_password.html
+++ b/chaijs/user/forgot_password.html
@@ -10,7 +10,7 @@ if($('#login_view').length) {
 	$('#login_view').modal('hide');
 }
 
-$.require('lib/views/form/form.js');
+$.require('lib/chaijs/form/form.js');
 var forget_password = new FormView({
 	$parent: $('#forgot_password'),
 	method: 'lib.controllers.user.forgot_password',
