--- a/chaijs/user/reset_password.html
+++ b/chaijs/user/reset_password.html
@@ -9,7 +9,7 @@ Render form
 */
 
 app.make_reset_password_form = function() {
-	$.require('lib/views/form/form.js');
+	$.require('lib/chaijs/form/form.js');
 	var reset_form = new FormView({
 		$parent: $('#reset_form_wrapper'),
 		primary_btn_label: 'Update Password',
